--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
   get_it: any
   flutter_bloc: any
   equatable: any
-  logger: any
-   # flutter pub run build_runner build --delete-conflicting-outputs
-  json_annotation: any
+
+   # flutter pub run build_runner build
+  json_serializable: ^6.1.3
   retrofit: any
   # flutter packages pub run build_runner build
   floor: ^1.1.0
@@ -28,6 +28,8 @@ dependencies:
   #------------------
 
   recase: ^4.0.0
+
+  path_provider: ^2.0.8
 
   intl: ^0.17.0
   flutter_localizations:
