--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_code_base">
+    package="com.prj.flutter_base_prj">
    <application
         android:label="flutter_code_base"
         android:icon="@mipmap/ic_launcher">
