--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
 
   path_provider: ^2.0.8
 
+  #Rename package
+  change_app_package_name: ^1.0.0
+
   intl: ^0.17.0
   flutter_localizations:
     sdk: flutter
