--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   #Rename package
   change_app_package_name: ^1.0.0
 
+  cached_network_image: ^3.2.0
+
+  flutter_svg: ^1.0.0
+
   intl: ^0.17.0
   flutter_localizations:
     sdk: flutter
